...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="285dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
...
                android:text="Hong Kong Cheongsam"
                android:textColor="#E64A19"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/openLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:onClick="openSignIn"
                android:text="Sign in" />
...
